--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,13 +18,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">关于</a>
+                        <a class="page-scroll" href="#about">about</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">下载</a>
+                        <a class="page-scroll" href="#download">download</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">联系方式</a>
+                        <a class="page-scroll" href="#contact">contact</a>
                     </li>
                 </ul>
             </div>
