--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
                 </svg>
                 <!-- </span> -->
             </div>
-            <a href="http://qinxiaoshou.github.io">
+            <a href="https://Qinxiaoshou.github.io">
                 Fork me on github
             </a>
         </div>
